--- a/PopUpModal.css
+++ b/PopUpModal.css
@@ -3,7 +3,7 @@
     place-items: center;
 }
 #popup-container {
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
