--- a/PopUpModal.css
+++ b/PopUpModal.css
@@ -40,7 +40,7 @@
 }
 #btnOpenModal {
     background-color: rgb(85, 80, 80);
-    color: white;
+    color: red;
     outline: none;
     border: 1px solid white;
     border-radius: 25px;
